# Api_List_Tareas

./: .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  README.md  README_INSOMNIA.md  README_TEST_DB.md  conftest.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  insomnia_collection.json  migrate_db.py  pytest.ini  requirements.txt  run_tests.py  tareas.db  tareas_backup_20250628_190704.db  test_api.py
app/: config.py  crud.py  main.py  models.py  password_validator.py  schemas.py  security.py
backend/: Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
backend/app/: config.py  crud.py  database.py  main.py  schemas.py  security.py
backend/tests/: conftest.py  test_password_validation.py
frontend/: Dockerfile  README.md  TESTING.md  nginx.conf  package-lock.json  package.json  run-tests.js
frontend/public/: healthcheck.html  index.html  manifest.json
frontend/src/: App.css  App.js  index.css  setupTests.js
frontend/src/components/: PrivateRoute.js
frontend/src/components/__tests__/: PrivateRoute.test.js
frontend/src/contexts/: AuthContext.js  TaskContext.js
frontend/src/contexts/__tests__/: AuthContext.test.js  TaskContext.test.js
frontend/src/pages/: Dashboard.js  Login.js  Register.js
frontend/src/pages/__tests__/: Login.test.js
frontend/src/services/: api.js
frontend/src/services/__tests__/: api.test.js
tests/: README.md  __init__.py  test_api.py  test_integration.py  test_password_hashing.py
