[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lista-tareas-backend"
version = "1.0.0"
description = "Backend API para gestión de tareas con autenticación JWT"
authors = [{name = "Desarrollador", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.27",
    "pydantic==2.6.1",
    "pydantic[email]==2.6.1",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "password-validator==1.0",
    "requests==2.31.0",
    "httpx==0.26.0",
    "python-dotenv==1.0.1",
    "psycopg2-binary"
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "password: marks tests related to password validation and hashing",
    "api: marks tests related to API endpoints",
    "security: marks tests related to security features"
] 